--- a/StartupCarvaan/app/src/main/res/layout/activity_helppage.xml
+++ b/StartupCarvaan/app/src/main/res/layout/activity_helppage.xml
@@ -62,9 +62,9 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="why should you do this?"
+                        android:text="How to start?"
                         android:textColor="#2C9FD3"
-                        android:textSize="18sp"
+                        android:textSize="19sp"
                         android:textStyle="bold" />
 
                     <LinearLayout
@@ -93,12 +93,77 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="20dp"
-                    android:layout_marginTop="5dp"
+                    android:layout_marginTop="2dp"
                     android:layout_marginRight="20dp"
-                    android:layout_marginBottom="15dp"
-                    android:text="duyegkddddddddddddddddddddddddddhgjhuiegkd"
+                    android:layout_marginBottom="6dp"
+                    android:text="• There is a create or edit profile page where you can complete your profile or by uploading resumes. These are directly seen by our listing startups if any startup needs any intern or anything that matches your profile they can contact you."
                     android:textColor="@color/black"
                     android:textSize="15sp" />
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="20dp"
+
+                        android:layout_marginRight="20dp"
+                        android:layout_marginBottom="6dp"
+                        android:text="• There is a level page in the side drawer .In this page there are 13 levels ,after completion of each level you will be rewarded some rci coins.Level increases as your points increases and your points will increase by the increase of your investment.
+"
+                        android:textColor="@color/black"
+                        android:textSize="15sp" />
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="20dp"
+
+                        android:layout_marginRight="20dp"
+                        android:layout_marginBottom="6dp"
+                        android:text="• In this app you can have two types of coins : the rci coins and the bonus coins. Rci coins can only be bought directly from money and you can get bonus coins by watching ads , liking the post and betting on teams through the competition page.
+"
+                        android:textColor="@color/black"
+                        android:textSize="15sp" />
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="20dp"
+
+                        android:layout_marginRight="20dp"
+                        android:layout_marginBottom="6dp"
+                        android:text="• There is a competition section where you can vote a startup or betting some bonus coins on that and if that startup wins than you will get (rate of return*your betting) bonus coins so it will increase your bonus coins."
+                        android:textColor="@color/black"
+                        android:textSize="15sp" />
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="20dp"
+
+                        android:layout_marginRight="20dp"
+                        android:layout_marginBottom="6dp"
+                        android:text="• For watching ads go to the your coins section or profile and then click on the get bonus button.Then the page appears in front of you where you can see by how much rci you get by entering a specific amount then buy according to your need.
+"
+                        android:textColor="@color/black"
+                        android:textSize="15sp" />
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="20dp"
+
+                        android:layout_marginRight="20dp"
+                        android:layout_marginBottom="6dp"
+                        android:text="• From bonus coins you can participate in bidding contests and win exciting gifts and from rci you can buy dummy shares of a startup.
+"
+                        android:textColor="@color/black"
+                        android:textSize="15sp" />
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="20dp"
+
+                        android:layout_marginRight="20dp"
+                        android:layout_marginBottom="15dp"
+                        android:text="• For bidding go to the bidding section from the bottom bar and then there are different items there showing the current winner and the amount he/she bids if you want to get that item bid more than that.Also there is a time written on the top which is showing till when the bidding continues on that item.
+"
+                        android:textColor="@color/black"
+                        android:textSize="15sp" />
                 </LinearLayout>
 
             </LinearLayout>
@@ -121,7 +186,8 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="why should you do this?"
+                        android:text="How to buy RCI ?
+"
                         android:textColor="#2C9FD3"
                         android:textSize="18sp"
                         android:textStyle="bold" />
@@ -154,8 +220,42 @@
                         android:layout_marginLeft="20dp"
                         android:layout_marginTop="5dp"
                         android:layout_marginRight="20dp"
-                        android:layout_marginBottom="15dp"
-                        android:text="duyegkddddddddddddddddddddddddddhgjhuiegkd"
+
+                        android:text="• Go to the coin page and click on the buy rci button.
+"
+                        android:textColor="@color/black"
+                        android:textSize="15sp" />
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="20dp"
+                        android:layout_marginTop="5dp"
+                        android:layout_marginRight="20dp"
+
+                        android:text="• Enter the number of rci coins you want to buy
+ "
+                        android:textColor="@color/black"
+                        android:textSize="15sp" />
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="20dp"
+                        android:layout_marginTop="5dp"
+                        android:layout_marginRight="20dp"
+
+                        android:text="• Then the equivalent amount in rupees will be shown in the next page and if you want to continue click on confirm , you will be taken to the payment gateway where you can complete the transaction.
+"
+                        android:textColor="@color/black"
+                        android:textSize="15sp" />
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="20dp"
+                        android:layout_marginTop="5dp"
+                        android:layout_marginRight="20dp"
+
+                        android:text="• If your transaction is delayed and failed , don't worry, wait 30 minutes and if your deducted money doesn’t come back to your account or your money doesn’t reflect on the app, call us on the number provided below."
+                        android:layout_marginBottom="8dp"
                         android:textColor="@color/black"
                         android:textSize="15sp" />
                 </LinearLayout>
@@ -180,7 +280,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="why should you do this?"
+                        android:text="About Startup shares:"
                         android:textColor="#2C9FD3"
                         android:textSize="18sp"
 
@@ -214,10 +314,45 @@
                         android:layout_marginLeft="20dp"
                         android:layout_marginTop="5dp"
                         android:layout_marginRight="20dp"
-                        android:layout_marginBottom="15dp"
-                        android:text="duyegkddddddddddddddddddddddddddhgjhuiegkd"
+
+                        android:text="• As you are already aware of the rules of a startup share, one thing to remember is the following shares are not the actual shares of a startup, these are made to reflect the startup.
+"
                         android:textColor="@color/black"
                         android:textSize="15sp" />
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="20dp"
+                        android:layout_marginTop="5dp"
+                        android:layout_marginRight="20dp"
+
+                        android:text="• You can buy and sell a startup share at different prices to make profits.You can hold as many as shares of a single startup at different prices and sell them all at a single price.
+"
+                        android:textColor="@color/black"
+                        android:textSize="15sp" />
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="20dp"
+                        android:layout_marginTop="5dp"
+                        android:layout_marginRight="20dp"
+
+                        android:text="• Once a startup reaches its 100 percent growth , all your holdings will be sold automatically and you will be given an extra 10percent profit on each of your holdings. "
+                        android:textColor="@color/black"
+                        android:textSize="15sp" />
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="20dp"
+                        android:layout_marginTop="5dp"
+                        android:layout_marginRight="20dp"
+                        android:layout_marginBottom="8dp"
+
+                        android:text="• As you are also aware of the price change of a startup do follow a startup before investment.
+"
+                        android:textColor="@color/black"
+                        android:textSize="15sp" />
+
                 </LinearLayout>
 
             </LinearLayout>
@@ -240,7 +375,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="why should you do this?"
+                        android:text="How to sell and buy shares ?"
                         android:textColor="#2C9FD3"
                         android:textSize="18sp"
                         android:textStyle="bold" />
@@ -273,72 +408,31 @@
                         android:layout_marginLeft="20dp"
                         android:layout_marginTop="5dp"
                         android:layout_marginRight="20dp"
-                        android:layout_marginBottom="15dp"
-                        android:text="duyegkddddddddddddddddddddddddddhgjhuiegkd"
+
+                        android:text="• For buying the shares with rci of your favorite startup .Go to the invest in me button shown in the all shares section of that particular startup then a blog page appears where you can like and comment on the post posted by that startup and there is a section  of sell click on that then enter the amount of the share you want to buy and then click on buy button.
+"
                         android:textColor="@color/black"
                         android:textSize="15sp" />
-                </LinearLayout>
-
-            </LinearLayout>
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:id="@+id/linear5"
-                android:orientation="vertical">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="20dp"
-                    android:id="@+id/linear15"
-                    android:layout_marginTop="8dp"
-                    android:layout_marginRight="20dp"
-                    android:orientation="horizontal">
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="why should you do this?"
-                        android:textColor="#2C9FD3"
-                        android:textSize="18sp"
-                        android:textStyle="bold" />
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:gravity="right|center_vertical">
-
-                        <ImageView
-                            android:layout_width="30dp"
-                            android:layout_height="30dp"
-                            android:id="@+id/im5"
-                            android:src="@drawable/ic_baseline_arrow_drop_down_24" />
-
-                    </LinearLayout>
-
-
-                </LinearLayout>
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:id="@+id/text5"
-                    android:visibility="gone">
-
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="20dp"
                         android:layout_marginTop="5dp"
                         android:layout_marginRight="20dp"
-                        android:layout_marginBottom="15dp"
-                        android:text="duyegkddddddddddddddddddddddddddhgjhuiegkd"
+
+                        android:text="• Similarly click on the Invest in me button and then go to the sell section  and choose which price shares you want to sell and then click on  sell button to sell that particular holding."
                         android:textColor="@color/black"
                         android:textSize="15sp" />
+
                 </LinearLayout>
 
             </LinearLayout>
+
+
+
+
+
+
 
         </LinearLayout>
     </ScrollView>
