--- a/StartupCarvaan/app/src/main/res/layout/activity_payin.xml
+++ b/StartupCarvaan/app/src/main/res/layout/activity_payin.xml
@@ -27,7 +27,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="38dp"
                 android:ems="10"
-
+android:textColor="@color/black"
+                android:textColorHint="@color/greyish"
                 android:background="@drawable/inputtype"
                 android:inputType="number"
                 android:textSize="16sp"
@@ -82,6 +83,8 @@
                     android:layout_marginRight="50dp"
                     android:layout_marginLeft="50dp"
                     android:ems="10"
+                    android:textColor="@color/black"
+                    android:textColorHint="@color/greyish"
                     android:textSize="15sp"
                     android:background="@drawable/inputtype"
                     android:inputType="textPersonName"
@@ -98,6 +101,8 @@
                     android:layout_marginLeft="50dp"
                     android:ems="10"
                     android:textSize="15sp"
+                    android:textColor="@color/black"
+                    android:textColorHint="@color/greyish"
                     android:background="@drawable/inputtype"
                     android:inputType="textPersonName"
                     android:gravity="center"
