--- a/StartupCarvaan/app/src/main/res/layout/activity_login.xml
+++ b/StartupCarvaan/app/src/main/res/layout/activity_login.xml
@@ -191,13 +191,26 @@ android:gravity="bottom|center_horizontal"
             android:layout_marginRight="35dp"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
-            <CheckBox
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:orientation="horizontal">
+            <CheckBox
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:id="@+id/checkprivacy"
-                android:text="Privacy policy ,Terms and Conditions,Rules and Regulations"
-                android:textSize="16sp"
+               android:text="• "
                 android:layout_marginBottom="20dp"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Privacy policy ,Terms and Conditions,Rules and Regulations"
+                    android:textSize="16sp"
+                    android:layout_marginLeft="5dp"
+                    android:textColor="?attr/txtsugestion"
+
+                    />
+            </LinearLayout>
             <TextView
                 android:id="@+id/phonebutton"
                 android:layout_width="match_parent"
