--- a/StartupCarvaan/app/src/main/res/layout/activity_payout.xml
+++ b/StartupCarvaan/app/src/main/res/layout/activity_payout.xml
@@ -27,7 +27,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="38dp"
                 android:ems="10"
-
+                android:textColor="@color/black"
+                android:textColorHint="@color/greyish"
                 android:background="@drawable/inputtype"
                 android:inputType="number"
                 android:textSize="16sp"
@@ -82,6 +83,8 @@
                     android:layout_marginRight="50dp"
                     android:layout_marginLeft="50dp"
                     android:ems="10"
+                    android:textColor="@color/black"
+                    android:textColorHint="@color/greyish"
                     android:textSize="15sp"
                     android:background="@drawable/inputtype"
                     android:inputType="textPersonName"
@@ -96,6 +99,8 @@
                     android:layout_marginRight="50dp"
                     android:layout_marginLeft="50dp"
                     android:ems="10"
+                    android:textColor="@color/black"
+                    android:textColorHint="@color/greyish"
                     android:textSize="15sp"
                     android:background="@drawable/inputtype"
                     android:inputType="textPersonName"
@@ -109,7 +114,8 @@
                     android:layout_height="40dp"
                     android:layout_marginRight="50dp"
                     android:layout_marginLeft="50dp"
-
+                    android:textColor="@color/black"
+                    android:textColorHint="@color/greyish"
                     android:ems="10"
                     android:textSize="15sp"
                     android:background="@drawable/inputtype"
@@ -185,7 +191,7 @@
                         android:layout_marginTop="20dp"
                         android:id="@+id/withdrawButton"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_height="48dp"
                         android:backgroundTint="#2C9FD3"
                         android:text="Withdraw"
                         />
