--- a/StartupCarvaan/app/src/main/res/layout/activity_payin.xml
+++ b/StartupCarvaan/app/src/main/res/layout/activity_payin.xml
@@ -28,7 +28,8 @@
                 android:layout_height="38dp"
                 android:ems="10"
 android:textColor="@color/black"
-                android:textColorHint="@color/greyish"
+                android:textColorHint="@color/hinttext"
+
                 android:background="@drawable/inputtype"
                 android:inputType="number"
                 android:textSize="16sp"
@@ -58,6 +59,7 @@ android:textColor="@color/black"
                 android:gravity="center"
                 android:layout_marginLeft="8dp"
                 android:textStyle="bold"
+
                 android:textColor="#FFFFFF"
                 android:layout_marginTop="20dp"
                 android:text="0"
@@ -83,8 +85,9 @@ android:textColor="@color/black"
                     android:layout_marginRight="50dp"
                     android:layout_marginLeft="50dp"
                     android:ems="10"
+                    android:textColorHint="@color/hinttext"
                     android:textColor="@color/black"
-                    android:textColorHint="@color/greyish"
+
                     android:textSize="15sp"
                     android:background="@drawable/inputtype"
                     android:inputType="textPersonName"
@@ -101,8 +104,9 @@ android:textColor="@color/black"
                     android:layout_marginLeft="50dp"
                     android:ems="10"
                     android:textSize="15sp"
+                    android:textColorHint="@color/hinttext"
                     android:textColor="@color/black"
-                    android:textColorHint="@color/greyish"
+
                     android:background="@drawable/inputtype"
                     android:inputType="textPersonName"
                     android:gravity="center"
