--- a/StartupCarvaan/app/src/main/res/layout/dailogsell.xml
+++ b/StartupCarvaan/app/src/main/res/layout/dailogsell.xml
@@ -9,7 +9,22 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="12dp"
+        android:layout_marginRight="20dp"
+        android:gravity="right">
+
+        <ImageView
+            android:id="@+id/sellclose"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:src="@drawable/cross" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:gravity="center"
+        android:layout_marginTop="15dp"
         android:orientation="horizontal">
 
         <TextView
@@ -22,6 +37,7 @@
 
             android:gravity="right"
             android:text="$ 2.15"
+            android:textStyle="bold"
             android:textColor="#E8D63C"
             android:textSize="45sp" />
 
@@ -40,6 +56,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="5dp"
+        android:layout_marginTop="12dp"
         android:background="#000000" />
 
     <TextView
