--- a/StartupCarvaan/app/src/main/res/values/colors.xml
+++ b/StartupCarvaan/app/src/main/res/values/colors.xml
@@ -21,6 +21,8 @@
     <color name="green">#FF59B563</color>
     <color name="bluetr">#4E3F68</color>FF7981AE
     <color name="bluepupr">#FF7981AE</color>
+    <color name="hinttext">#FF8E8D8D</color>
+
 
     <color name="purp20">#756D77</color>
 
