--- a/StartupCarvaan/app/src/main/res/layout/activity_create_profile.xml
+++ b/StartupCarvaan/app/src/main/res/layout/activity_create_profile.xml
@@ -5,14 +5,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/grey"
+    android:background="?attr/bidbackground"
     android:orientation="vertical"
     tools:context=".user.ProfileActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="240dp"
-        android:background="#293859" />
+        android:background="?attr/barcolour" />
 
     <!--Top Header Layout-->
     <LinearLayout
@@ -147,6 +147,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="@string/about_me"
+                                android:textColor="@color/goodgrey"
                                 android:fontFamily="@font/proximanovaregular"
                                 android:textSize="17sp"
                                 android:textStyle="bold" />
@@ -163,6 +164,8 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="10dp"
+                            android:textColor="@color/goodgrey"
+                            android:textColorHint="@color/goodgrey"
                             android:hint="enter anything about you that shows your personality"
                             android:maxLength="50"/>
                     </LinearLayout>
@@ -187,6 +190,7 @@
                             android:layout_height="wrap_content"
                             android:text="@string/contact"
                             android:textSize="17sp"
+                            android:textColor="@color/goodgrey"
                             android:fontFamily="@font/proximanovaregular"
                             android:textStyle="bold" />
 
@@ -218,6 +222,7 @@
                             <TextView
                                 android:layout_marginLeft="20dp"
                                 android:text="+91"
+                                android:textColor="@color/goodgrey"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content">
 
@@ -228,6 +233,7 @@
                                 android:layout_height="wrap_content"
                                 android:hint="enter your contact number"
                                 android:textSize="15sp"
+                                android:textColorHint="@color/goodgrey"
                                 android:textColor="@color/goodgrey"
                                 android:inputType="numberDecimal"
                                 android:maxLength="10"
@@ -253,6 +259,7 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_marginLeft="20dp"
+                                android:textColorHint="@color/goodgrey"
                                 android:textColor="@color/goodgrey"
                                 android:hint="enter professing email id"
                                 android:textSize="15sp"
@@ -282,6 +289,7 @@
                                 android:layout_marginLeft="20dp"
                                 android:hint="your address here"
                                 android:textSize="15sp"
+                                android:textColorHint="@color/goodgrey"
                                 android:textColor="@color/goodgrey"
                                 android:inputType="textPostalAddress"
                                 android:fontFamily="@font/proximanovaregular"
