--- a/StartupCarvaan/app/src/main/res/layout/activity_login.xml
+++ b/StartupCarvaan/app/src/main/res/layout/activity_login.xml
@@ -194,6 +194,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+
                 android:orientation="horizontal">
             <CheckBox
                 android:layout_width="wrap_content"
@@ -219,6 +220,7 @@
                 android:text="Sign in with Phone Number"
                 android:textColor="@color/white"
                 android:gravity="center"
+                android:layout_marginTop="14dp"
                 android:background="@drawable/phonesign"
                 android:textSize="17sp"/>
             <com.google.android.gms.common.SignInButton
