--- a/StartupCarvaan/app/src/main/res/layout/activity_payout.xml
+++ b/StartupCarvaan/app/src/main/res/layout/activity_payout.xml
@@ -29,7 +29,7 @@
                 android:ems="10"
 
                 android:textColor="@color/black"
-                android:textColorHint="@color/greyish"
+                android:textColorHint="@color/hinttext"
 
                 android:background="@drawable/inputtype"
                 android:inputType="number"
@@ -86,11 +86,12 @@
                     android:layout_marginLeft="50dp"
                     android:ems="10"
                     android:textColor="@color/black"
-                    android:textColorHint="@color/greyish"
+
                     android:textSize="15sp"
                     android:background="@drawable/inputtype"
                     android:inputType="textPersonName"
                     android:gravity="center"
+                    android:textColorHint="@color/hinttext"
                     android:layout_marginTop="20dp"
                     android:hint="Enter your Full Name"
                     />
@@ -102,7 +103,8 @@
                     android:layout_marginLeft="50dp"
                     android:ems="10"
                     android:textColor="@color/black"
-                    android:textColorHint="@color/greyish"
+                    android:textColorHint="@color/hinttext"
+
                     android:textSize="15sp"
                     android:background="@drawable/inputtype"
                     android:inputType="textPersonName"
@@ -117,8 +119,9 @@
                     android:layout_marginRight="50dp"
                     android:layout_marginLeft="50dp"
                     android:textColor="@color/black"
-                    android:textColorHint="@color/greyish"
+
                     android:ems="10"
+                    android:textColorHint="@color/hinttext"
                     android:textSize="15sp"
                     android:background="@drawable/inputtype"
                     android:inputType="textPersonName"
