--- a/StartupCarvaan/app/src/main/res/layout/activity_phone_auth.xml
+++ b/StartupCarvaan/app/src/main/res/layout/activity_phone_auth.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="180dp"
         android:layout_marginTop="100dp"
-        android:src="@drawable/swend"/>
+        android:src="@drawable/phoneau"/>
     <TextView
         android:layout_width="match_parent"
         android:gravity="center"
