--- a/StartupCarvaan/app/src/main/res/layout/activity_privacy_policy.xml
+++ b/StartupCarvaan/app/src/main/res/layout/activity_privacy_policy.xml
@@ -80,7 +80,7 @@
                        "
                             android:textSize="16sp"
                             android:textStyle="bold"
-                            android:textColor="@color/black"/>
+                            android:textColor="?attr/txtsugestion"/>
                             <TextView
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
@@ -94,7 +94,7 @@
                        "
                                 android:textSize="14sp"
 
-                                android:textColor="@color/black"/>
+                                android:textColor="?attr/txtsugestion"/>
                             <TextView
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
@@ -108,7 +108,7 @@
                        "
                                 android:textSize="14sp"
 
-                                android:textColor="@color/black"/>
+                                android:textColor="?attr/txtsugestion"/>
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
@@ -121,7 +121,7 @@
                        "
                             android:textSize="16sp"
                             android:textStyle="bold"
-                            android:textColor="@color/black"/>
+                            android:textColor="?attr/txtsugestion"/>
                             <TextView
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
@@ -134,7 +134,7 @@
                        "
                                 android:textSize="14sp"
 
-                                android:textColor="@color/black"/>
+                                android:textColor="?attr/txtsugestion"/>
                             <TextView
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
@@ -147,7 +147,7 @@
                 "
                                 android:textSize="14sp"
 
-                                android:textColor="@color/black"/>
+                                android:textColor="?attr/txtsugestion"/>
                             <TextView
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
@@ -161,7 +161,7 @@
                        "
                                 android:textSize="16sp"
                                 android:textStyle="bold"
-                                android:textColor="@color/black"/>
+                                android:textColor="?attr/txtsugestion"/>
                             <TextView
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
@@ -175,7 +175,7 @@
                        "
                                 android:textSize="14sp"
 
-                                android:textColor="@color/black"/>
+                                android:textColor="?attr/txtsugestion"/>
                             <TextView
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
@@ -188,7 +188,7 @@
             "
                                 android:textSize="14sp"
 
-                                android:textColor="@color/black"/>
+                                android:textColor="?attr/txtsugestion"/>
                             <TextView
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
@@ -203,7 +203,7 @@
                        "
                                 android:textSize="16sp"
                                 android:textStyle="bold"
-                                android:textColor="@color/black"/>
+                                android:textColor="?attr/txtsugestion"/>
                             <TextView
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
@@ -216,7 +216,7 @@
                        "
                                 android:textSize="14sp"
 
-                                android:textColor="@color/black"/>
+                                android:textColor="?attr/txtsugestion"/>
                             <TextView
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
@@ -229,7 +229,7 @@
             "
                                 android:textSize="14sp"
 
-                                android:textColor="@color/black"/>
+                                android:textColor="?attr/txtsugestion"/>
                             <TextView
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
@@ -243,7 +243,7 @@
                        "
                                 android:textSize="16sp"
                                 android:textStyle="bold"
-                                android:textColor="@color/black"/>
+                                android:textColor="?attr/txtsugestion"/>
                             <TextView
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
@@ -257,7 +257,7 @@
                        "
                                 android:textSize="14sp"
 
-                                android:textColor="@color/black"/>
+                                android:textColor="?attr/txtsugestion"/>
 
                         </LinearLayout>
 
