--- a/StartupCarvaan/app/src/main/res/layout/buysuccess.xml
+++ b/StartupCarvaan/app/src/main/res/layout/buysuccess.xml
@@ -27,9 +27,11 @@
         android:layout_marginTop="5dp"
 
         android:lines="1"
+
         android:text="Amazing Investor"
         android:textColor="#0b4926"
-        android:textSize="35sp" />
+        android:textStyle="bold"
+        android:textSize="42sp" />
 
     <TextView
         android:layout_width="match_parent"
@@ -39,10 +41,10 @@
         android:background="#0b4926" />
 
     <ImageView
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="17dp"
         android:layout_marginBottom="10dp"
         android:src="@drawable/ic_baseline_thumb_up_24" />
 
@@ -50,7 +52,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="18dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="18dp"
         android:layout_marginRight="18dp"
         android:layout_marginBottom="22dp"
 
