--- a/StartupCarvaan/app/src/main/res/layout/profile_main.xml
+++ b/StartupCarvaan/app/src/main/res/layout/profile_main.xml
@@ -121,6 +121,7 @@
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/proximanovaregular"
                         android:text="Android Developer"
+                        android:textColor="@color/goodgrey"
                         android:textSize="14sp" />
 
 
@@ -291,6 +292,7 @@
                                 android:text="@string/about_me"
                                 android:fontFamily="@font/proximanovaregular"
                                 android:textSize="17sp"
+                                android:textColor="@color/greyish"
                                 android:textStyle="bold" />
 
                             <Space
@@ -305,6 +307,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="10dp"
+                            android:textColor="@color/goodgrey"
                             android:text="@string/my_desc" />
                     </LinearLayout>
 
@@ -329,6 +332,7 @@
                             android:layout_height="wrap_content"
                             android:text="@string/contact"
                             android:textSize="17sp"
+                            android:textColor="@color/greyish"
                             android:fontFamily="@font/proximanovaregular"
                             android:textStyle="bold" />
 
@@ -364,6 +368,7 @@
                                 android:layout_height="wrap_content"
                                 android:layout_marginLeft="20dp"
                                 android:text="+91 7999193854"
+
                                 android:textSize="15sp"
                                 android:textColor="@color/goodgrey"
                                 android:fontFamily="@font/proximanovaregular" />
