--- a/StartupCarvaan/app/src/main/res/layout/sellsuccess.xml
+++ b/StartupCarvaan/app/src/main/res/layout/sellsuccess.xml
@@ -21,10 +21,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Like a Boss!"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="15dp"
         android:layout_gravity="center_horizontal"
-        android:textSize="35sp"
+        android:textSize="40sp"
         android:lines="1"
+        android:textStyle="bold"
         android:textColor="#FFFFFF"
         tools:autoSizeTextType="uniform"
    />
@@ -36,23 +37,24 @@
         android:layout_marginBottom="5dp"
         />
     <ImageView
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="20dp"
         android:layout_marginBottom="10dp"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
         android:layout_gravity="center_horizontal"
         android:src="@drawable/ic_baseline_thumb_up_24"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="5dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp"
         android:text="You have successfully Sell the shares of this company."
         android:textSize="20sp"
+        android:layout_marginTop="15dp"
         android:textAlignment="center"
         android:textColor="#FFFFFF"
-
+        android:fontFamily="@font/proximanovaregular"
         android:gravity="center_horizontal"
-        android:layout_marginBottom="20dp"/>
+        android:layout_marginBottom="25dp"/>
 </LinearLayout>
