--- a/StartupCarvaan/app/src/main/res/layout/singlecomment.xml
+++ b/StartupCarvaan/app/src/main/res/layout/singlecomment.xml
@@ -2,7 +2,7 @@
 <androidx.cardview.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:background="#FFFFFF"
+    android:background="?attr/backgroundcolourmain"
     android:layout_height="wrap_content">
     <LinearLayout
         android:layout_width="match_parent"
@@ -17,8 +17,8 @@
         android:orientation="horizontal">
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/image"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="34dp"
+            android:layout_height="34dp"
             android:src="@drawable/vsm_coin">
         </de.hdodenhof.circleimageview.CircleImageView>
         <LinearLayout
@@ -28,9 +28,9 @@
         <TextView
             android:id="@+id/displayname1"
             android:textSize="17dp"
-            android:layout_marginLeft="16dp"
+            android:layout_marginLeft="9dp"
             android:textStyle="bold"
-            android:textColor="@color/black"
+            android:textColor="?attr/txtsugestion"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="username :">
@@ -40,7 +40,7 @@
 
 android:layout_marginTop="3dp"
                 android:layout_marginLeft="16dp"
-
+                android:textColor="?attr/txtsugestion"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="3 hrs ago">
@@ -53,12 +53,15 @@ android:layout_marginTop="3dp"
             android:id="@+id/comment"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:textSize="18sp"
-            android:padding="10dp"
-            android:layout_marginBottom="12dp"
+            android:layout_marginTop="2dp"
+                 android:fontFamily="@font/proximanovaregular"
+            android:textSize="15sp"
+            android:textColor="?attr/txtsugestion"
+          android:layout_marginLeft="45dp"
+            android:layout_marginRight="30dp"
+            android:layout_marginBottom="10dp"
             android:text="ytfdsfyusdcrcrcf"
-            android:textColor="@color/black"
+
             />
     </LinearLayout>
 
