--- a/StartupCarvaan/app/src/main/res/layout/z_single_practice.xml
+++ b/StartupCarvaan/app/src/main/res/layout/z_single_practice.xml
@@ -132,18 +132,24 @@
                         android:textColorHint="@color/greyish"
                         android:textSize="17sp"
                         android:textStyle="bold" />
+                    <ImageView
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
+                        android:layout_marginLeft="8dp"
+                        android:src="@drawable/bonuscoin"/>
+
                 </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp"
+             android:layout_marginTop="8dp"
                     android:layout_marginRight="30dp"
                     android:gravity="center"
                     android:orientation="horizontal">
 
                     <TextView
-                        android:layout_marginTop="10dp"
+
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Bet Now: "
@@ -152,7 +158,6 @@
                         android:textStyle="bold" />
 
                     <EditText
-                        android:layout_marginTop="10dp"
                         android:id="@+id/betting"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -160,9 +165,14 @@
                         android:inputType="number"
                         android:maxLength="8"
                         android:textColor="@color/black"
-                        android:textColorHint="@color/greyish"
-                        android:textSize="15sp"
-                        android:textStyle="bold" />
+                        android:textColorHint="@color/hinttext"
+                        android:textSize="14sp"
+                       />
+                    <ImageView
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:layout_marginLeft="8dp"
+                        android:src="@drawable/bonuscoin"/>
                 </LinearLayout>
 
                 <LinearLayout
