--- a/StartupCarvaan/app/src/main/res/values/attrs.xml
+++ b/StartupCarvaan/app/src/main/res/values/attrs.xml
@@ -8,6 +8,7 @@
         <attr name="maintextcolour" format="color" />
         <attr name="cointextcolour" format="color" />
         <attr name="bidbackground" format="color" />
+        <attr name="barcolour" format="color" />
     </declare-styleable>
     <string name="appid">ca-app-pub-5245859690369666~7981162028</string>
     <string name="rewardid">ca-app-pub-5245859690369666/1031776146</string>
