--- a/StartupCarvaan/app/src/main/res/values/colors.xml
+++ b/StartupCarvaan/app/src/main/res/values/colors.xml
@@ -22,6 +22,7 @@
     <color name="bluetr">#4E3F68</color>FF7981AE
     <color name="bluepupr">#FF7981AE</color>
     <color name="hinttext">#FF8E8D8D</color>
+    <color name="skyblue">#E9EAEE</color>
 
 
     <color name="purp20">#756D77</color>
