--- a/StartupCarvaan/app/src/main/res/layout/profile_main.xml
+++ b/StartupCarvaan/app/src/main/res/layout/profile_main.xml
@@ -5,14 +5,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/grey"
+    android:background="?attr/bidbackground"
     android:orientation="vertical"
     tools:context=".user.ProfileActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="240dp"
-        android:background="#293859" />
+        android:background="?attr/barcolour" />
 
     <!--Top Header Layout-->
     <LinearLayout
