--- a/StartupCarvaan/app/src/main/res/layout/z_single_practice.xml
+++ b/StartupCarvaan/app/src/main/res/layout/z_single_practice.xml
@@ -34,8 +34,8 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="-10dp"
                 android:layout_below="@+id/videoplayer"
+                android:layout_marginTop="-10dp"
                 android:background="@drawable/circularbordersolid"
                 android:orientation="vertical">
 
@@ -132,18 +132,19 @@
                         android:textColorHint="@color/greyish"
                         android:textSize="17sp"
                         android:textStyle="bold" />
+
                     <ImageView
                         android:layout_width="20dp"
                         android:layout_height="20dp"
                         android:layout_marginLeft="8dp"
-                        android:src="@drawable/bonuscoin"/>
+                        android:src="@drawable/bonuscoin" />
 
                 </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-             android:layout_marginTop="8dp"
+                    android:layout_marginTop="8dp"
                     android:layout_marginRight="30dp"
                     android:gravity="center"
                     android:orientation="horizontal">
@@ -163,16 +164,17 @@
                         android:layout_height="wrap_content"
                         android:hint="example 100 bonus coins"
                         android:inputType="number"
+                        android:background="@drawable/phonesign"
                         android:maxLength="8"
                         android:textColor="@color/black"
                         android:textColorHint="@color/hinttext"
-                        android:textSize="14sp"
-                       />
+                        android:textSize="14sp" />
+
                     <ImageView
                         android:layout_width="30dp"
                         android:layout_height="30dp"
                         android:layout_marginLeft="8dp"
-                        android:src="@drawable/bonuscoin"/>
+                        android:src="@drawable/bonuscoin" />
                 </LinearLayout>
 
                 <LinearLayout
