--- a/StartupCarvaan/app/src/main/res/values/themes.xml
+++ b/StartupCarvaan/app/src/main/res/values/themes.xml
@@ -12,6 +12,7 @@
         <item name="cointextcolour">@color/purple</item>
         <item name="bidbackground">@color/grey</item>
         <item name="barcolour">@color/blue</item>
+        <item name="helppagery">@color/skyblue</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_200</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
