--- a/StartupCarvaan/app/src/main/res/layout/z_single_practice.xml
+++ b/StartupCarvaan/app/src/main/res/layout/z_single_practice.xml
@@ -162,9 +162,13 @@
                         android:id="@+id/betting"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:hint="example 100 bonus coins"
+                        android:hint="ex: 100 bonus coins"
                         android:inputType="number"
-                        android:background="@drawable/phonesign"
+                        android:paddingTop="4dp"
+                        android:paddingBottom="4dp"
+                        android:paddingLeft="8dp"
+                        android:paddingRight="10dp"
+                        android:background="@drawable/input"
                         android:maxLength="8"
                         android:textColor="@color/black"
                         android:textColorHint="@color/hinttext"
