--- a/StartupCarvaan/app/src/main/res/values/themes.xml
+++ b/StartupCarvaan/app/src/main/res/values/themes.xml
@@ -13,6 +13,8 @@
         <item name="bidbackground">@color/grey</item>
         <item name="barcolour">@color/blue</item>
         <item name="helppagery">@color/skyblue</item>
+        <item name="darkwhiteback">@color/white</item>
+        <item name="greyback">@color/grey</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_200</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
